--- a/characterCreation.html
+++ b/characterCreation.html
@@ -2,8 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="https://code.angularjs.org/1.4.0/angular.js"></script>
+    <title>Story Press</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <!-- AngularJS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+
+    <script src="       "></script>
     <style>
         body {
             font-family: Arial;
@@ -46,83 +59,95 @@
             background-color: #2efaff;
         }
 
-        #dummyContain {
-            display: flex;
-            flex-flow: row wrap;
-        }
+        /*#mainContent {*/
+            /*width: 70%;*/
+            /*height: 100%;*/
+            /*border-radius: 5px;*/
+            /*background-color: #a59ef2;*/
+            /*padding: 40px;*/
+        /*}*/
 
-        #mainContent {
-            width: 70%;
-            height: 100%;
-            border-radius: 5px;
-            background-color: #a59ef2;
-            padding: 40px;
-        }
 
-        #fakeSide {
-            border: 1px solid black;
-            width: 15%;
-            height: 85vh;
-        }
-
-        #fakeTop {
-            border: 1px solid black;
-            height: 15vh;
-            width: 100%;
-        }
     </style>
+    <link rel="stylesheet" text="text/css" href="style.css">
+
 </head>
-
 <body>
-<div id="dummyContain">
-    <div id="fakeTop"></div>
-    <aside id="fakeSide"></aside>
-    <div id="mainContent" ng-app="fakeApp" ng-controller="characterController as cc">
-        <h3>Create New Character</h3>
+<header>
+    <div id="title">
+        <!--temp title or maybe not-->
+        <h1>Story Press</h1>
+        <!--come up with better tag line-->
+        <span>Come up with a prompt, or write a story based on one!</span>
+    </div>
+</header>
+
+<div class="main-container">
+    <nav class="sidebar">
         <div>
-            <form  ng-submit="cc.sendCharacter()">
-                <label for="cName">Name</label>
-                <input type="text" id="cName" name="name" ng-model="cc.char.cName">
+            <span>fontawesome icon here</span>
+            <span>username</span>
+        </div>
+        <ul>
+            <li>Browse Stories/Prompts</li>
+            <li>My Stories</li>
+            <li>My Prompts</li>
+            <li>Account Settings</li>
+        </ul>
+    </nav>
 
-                <label for="cApperance">Physical Appearance</label>
-                <textarea type="text" id="cApperance" name="apperance" ng-model="cc.char.name"></textarea>
+    <div class="main-body">
 
-                <label for="cBackground">Background</label>
-                <textarea type="text" id="cBackground" name="background" ng-model="cc.char.background"></textarea>
+        <div id="characterForm" ng-app="fakeApp" ng-controller="characterController as cc">
+            <h3>Create New Character</h3>
+            <div>
+                <form  ng-submit="cc.sendCharacter()">
+                    <label for="cName">Name</label>
+                    <input type="text" id="cName" name="name" ng-model="cc.char.cName">
 
-                <label for="cPersonality">Personality</label>
-                <textarea type="text" id="cPersonality" name="personality" ng-model="cc.char.personality"></textarea>
+                    <label for="cApperance">Physical Appearance</label>
+                    <textarea type="text" id="cApperance" name="apperance" ng-model="cc.char.name"></textarea>
 
-                <label for="cRelations">Relations</label>
-                <select id="cRelations" name="relations" ng-model="cc.char.relations">
-                    <option value="1235136DaF32">TenderHeart Bear</option>
-                    <option value="3246f23as">Optimus Prime</option>
-                    <option value="12a24231">ScoobyDoo</option>
-                </select>
-                <input type="submit" value="Submit" >
-            </form>
-            <p ng-bind="cc.tester"></p>
-            <table>
-                <tbody>
-                <tr>
-                    <th>#</th>
-                    <th>Image</th>
-                    <th>Artist Name</th>
-                    <th>Track Name</th>
-                    <th>Price</th>
-                </tr>
-                <tr ng-repeat="song in cc.data">
-                    <td>{{ $index + 1 }}</td>
-                    <td><img ng-src="{{ song.artworkUrl60 }}"></td>
-                    <td>{{ song.artistName }}:</td>
-                    <td>{{ song.trackName }}</td>
-                    <td>{{ song.trackPrice }}</td>
-                </tr>
-                </tbody>
-            </table>
+                    <label for="cBackground">Background</label>
+                    <textarea type="text" id="cBackground" name="background" ng-model="cc.char.background"></textarea>
+
+                    <label for="cPersonality">Personality</label>
+                    <textarea type="text" id="cPersonality" name="personality" ng-model="cc.char.personality"></textarea>
+
+                    <label for="cRelations">Relations</label>
+                    <select id="cRelations" name="relations" ng-model="cc.char.relations">
+                        <option value="1235136DaF32">TenderHeart Bear</option>
+                        <option value="3246f23as">Optimus Prime</option>
+                        <option value="12a24231">ScoobyDoo</option>
+                    </select>
+                    <input type="submit" value="Submit" >
+                </form>
+                <p ng-bind="cc.tester"></p>
+                <table>
+                    <tbody>
+                    <tr>
+                        <th>#</th>
+                        <th>Image</th>
+                        <th>Artist Name</th>
+                        <th>Track Name</th>
+                        <th>Price</th>
+                    </tr>
+                    <tr ng-repeat="song in cc.data">
+                        <td>{{ $index + 1 }}</td>
+                        <td><img ng-src="{{ song.artworkUrl60 }}"></td>
+                        <td>{{ song.artistName }}:</td>
+                        <td>{{ song.trackName }}</td>
+                        <td>{{ song.trackPrice }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
+
 </div>
+
+<footer>Footer stuff</footer>
 </body>
 <script>
     angular.module("fakeApp", [])
@@ -179,3 +204,24 @@
 
 </script>
 </html>
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Title</title>-->
+    <!--<script src="https://code.angularjs.org/1.4.0/angular.js"></script>-->
+
+<!--</head>-->
+
+<!--<body>-->
+<!--<div id="dummyContain">-->
+    <!--<div id="fakeTop"></div>-->
+    <!--<aside id="fakeSide"></aside>-->
+
+<!--</div>-->
+<!--</body>-->
+
+<!--</html>-->
