--- a/characterCreation.html
+++ b/characterCreation.html
@@ -6,6 +6,7 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -16,7 +17,6 @@
     <!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 
-    <script src="       "></script>
     <style>
         body {
             font-family: Arial;
@@ -59,13 +59,42 @@
             background-color: #2efaff;
         }
 
-        /*#mainContent {*/
-            /*width: 70%;*/
-            /*height: 100%;*/
-            /*border-radius: 5px;*/
-            /*background-color: #a59ef2;*/
-            /*padding: 40px;*/
-        /*}*/
+
+        .spinner {
+            display: inline-block;
+            opacity: 0;
+            width: 0;
+
+            -webkit-transition: opacity 0.25s, width 0.25s;
+            -moz-transition: opacity 0.25s, width 0.25s;
+            -o-transition: opacity 0.25s, width 0.25s;
+            transition: opacity 0.25s, width 0.25s;
+        }
+
+        .has-spinner.active {
+            cursor:progress;
+        }
+
+        .has-spinner.active .spinner {
+            opacity: 1;
+            width: auto; /* This doesn't work, just fix for unkown width elements */
+        }
+
+        .has-spinner.btn-mini.active .spinner {
+            width: 10px;
+        }
+
+        .has-spinner.btn-small.active .spinner {
+            width: 13px;
+        }
+
+        .has-spinner.btn.active .spinner {
+            width: 16px;
+        }
+
+        .has-spinner.btn-large.active .spinner {
+            width: 19px;
+        }
 
 
     </style>
@@ -120,9 +149,17 @@
                         <option value="3246f23as">Optimus Prime</option>
                         <option value="12a24231">ScoobyDoo</option>
                     </select>
+
                     <input type="submit" value="Submit" >
                 </form>
+                <!--testing $HTML-->
                 <p ng-bind="cc.tester"></p>
+                <p class="active">
+                    <button class="btn btn-success has-spinner" ng-click="toggleSpin()">
+                        <span class="spinner"><i class="icon-spin icon-refresh"></i></span>
+                        Foo
+                    </button>
+                </p>
                 <table>
                     <tbody>
                     <tr>
@@ -141,6 +178,7 @@
                     </tr>
                     </tbody>
                 </table>
+                <!--end Test-->
             </div>
         </div>
     </div>
@@ -163,7 +201,7 @@
                 this.setInfo = function(s){
                     char = s;
                 };
-                this.callItunes = function(d){
+                this.createCharacter = function(d){
                     makeUrl();
                     console.log(url);
 
@@ -176,9 +214,11 @@
                 }
             })
 
-            .controller("characterController", function (characterService) {
+            .controller("characterController", function (characterService, $log) {
                 this.tester = characterService.test;
+                characterScope = this;
                 this.char = {};
+                this.loading = false;
                 this.logIt = function(){
                     console.log(this.char);
                     this.char = {};
@@ -190,38 +230,24 @@
                 this.sendCharInfo = function(){
                     characterService.setInfo(this.char);
                 };
+                this.toggleSpin = function(){
+                    console.log("spinning");
+                    $(this).toggleClass('active');
+                };
 
                 this.sendCharacter = function(){
+                    this.loading = true;
                     this.sendCharInfo();
-                    characterService.callItunes()
+                    characterService.createCharacter()
                             .then(function(data){
                                 self.data = data.results;
+                                characterScope.loading = false;
                             }, function(data){
-                                alert(data);
+                                $log.warn(data);
+                                characterScope.loading = false;
                             });
                 };
             })
 
 </script>
 </html>
-
-
-
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-    <!--<meta charset="UTF-8">-->
-    <!--<title>Title</title>-->
-    <!--<script src="https://code.angularjs.org/1.4.0/angular.js"></script>-->
-
-<!--</head>-->
-
-<!--<body>-->
-<!--<div id="dummyContain">-->
-    <!--<div id="fakeTop"></div>-->
-    <!--<aside id="fakeSide"></aside>-->
-
-<!--</div>-->
-<!--</body>-->
-
-<!--</html>-->
