--- a/index.html
+++ b/index.html
@@ -17,33 +17,42 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 
     <script src="       "></script>
+
+    <link href='https://fonts.googleapis.com/css?family=Imprima|Quando' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" text="text/css" href="style.css">
 
 </head>
 <body>
 <header>
-    <div id="title">
-        <!--temp title or maybe not-->
-      <h1>Story Press</h1>
-        <!--come up with better tag line-->
-        <span>Come up with a prompt, or write a story based on one!</span>
+    <div class="header-container">
+        <div id="title">
+            <!--temp title or maybe no-->
+            <img src="images/storypresslogo.png" src="logo">
+            <!--come up with better tag line-->
+            <div class="subtitle">Come up with a prompt, or write a story based on one!</div>
+        </div>
+        <div class="user-menu">username</div>
     </div>
 </header>
 <div class="main-container">
-<nav class="sidebar">
-    <div>
-        <span>fontawesome icon here</span>
-        <span>username</span>
-    </div>
-    <ul>
-        <li>Browse Stories/Prompts</li>
-        <li>My Stories</li>
-        <li>My Prompts</li>
-        <li>Account Settings</li>
-    </ul>
-</nav>
+    <nav class="sidebar">
+
+
+        <div>
+            <span>fontawesome icon here</span>
+            <span>username</span>
+        </div>
+        <ul>
+            <li>Browse Stories/Prompts</li>
+            <li>My Stories</li>
+            <li>My Prompts</li>
+            <li>Account Settings</li>
+        </ul>
+    </nav>
 
     <div class="main-body">
+
         <ul class="nav nav-pills">
             <li class="active"><a href="#">Available Prompts</a></li>
             <li><a href="#">Finished Stories</a></li>
