user menu started

--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
             <!--come up with better tag line-->
             <div class="subtitle">Come up with a prompt, or write a story based on one!</div>
         </div>
-        <div class="user-menu">username</div>
+        <div class="user-menu">
+            <div class="user-menu-name">
+                Username <span class="glyphicon glyphicon-triangle-bottom"></span>
+
+            </div>
+            <ul>
+                <li>My Prompts</li>
+                <li>My Stories</li>
+                <li>Account Settings</li>
+                <li>Logout</li>
+            </ul>
+        </div>
     </div>
 </header>
 <div class="main-container">
