--- a/characterCreation.html
+++ b/characterCreation.html
@@ -145,6 +145,20 @@
 <footer>Footer stuff</footer>
 </body>
 <script>
+    function getData(){
+        $.ajax({
+            url: 'get_prompts.php',
+            method: 'POST',
+            data: {mode:'all', page:1, per_page:10},
+            dataType: 'json',
+            success: function(response){
+                console.log(response);
+            }
+        });
+    }
+
+
+
     angular.module("fakeApp", [])
             .service("characterService", function ($http) {
                 this.test = "testing yo";
@@ -163,13 +177,13 @@
                     console.log(url);
 
                     return $http({
-                                method:'get',
-                                url:url,
-                                data: {mode:'all', page:1, per_page:10, prompt_id:2},
-                                cache:false
+                                method:'POST',
+                                url: baseUrl,
+                                data: {mode:'all', page:1, per_page:10},
+                                dataType: "json"
                             })
                             .then(function(response){
-                                return response.data;
+                                return response;
                             }, function(error){
                                 return error;
                             });
