--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         </div>
         <div class="user-menu">
             <div class="user-menu-name">
-                Username <span class="glyphicon glyphicon-triangle-bottom"></span>
+                wwwwwwwwwwwwwwww <span class="glyphicon glyphicon-triangle-bottom"></span>
 
             </div>
             <ul>
-                <li>My Prompts</li>
-                <li>My Stories</li>
-                <li>Account Settings</li>
-                <li>Logout</li>
+                <a href="#"><li>My Prompts</li></a>
+                <a href="#"><li>My Stories</li></a>
+                <a href="#"><li>Account Settings</li></a>
+                <a href="#"><li>Logout</li></a>
             </ul>
         </div>
     </div>
@@ -50,10 +50,7 @@
 
 <div class="main-container">
     <nav class="sidebar">
-        <div>
-            <span>fontawesome icon here</span>
-            <span>username</span>
-        </div>
+        <h3>Browse</h3>
         <ul>
             <li>Browse Stories/Prompts</li>
             <li>My Stories</li>
@@ -69,13 +66,22 @@
             <li><a href="#">Finished Stories</a></li>
         </ul>
         <br>
+        <div class="prompts">
+            <p><span class="prompt-label">Genre:</span> Genre information</p>
+            <p><span class="prompt-label">Setting:</span> Setting information</p>
+            <p><span class="prompt-label">Plot:</span>
+                Aliquam hendrerit ornare nulla non mollis. Donec et molestie nunc. Sed facilisis mi lacinia, consequat ligula a, consequat turpis. Nulla gravida ex vel libero ullamcorper condimentum. Aliquam erat volutpat. Ut elementum ac ex id interdum. Ut sodales feugiat mi, sollicitudin rutrum quam tempor at. Cras quis lorem magna. Donec aliquam eros vel neque dapibus, vel convallis metus imperdiet. Nullam vitae ligula non leo posuere pretium. Nunc imperdiet ligula nisl, at convallis quam condimentum ut. Phasellus tincidunt vulputate purus, pulvinar ultricies odio egestas venenatis.
 
+                Praesent tellus lectus, accumsan nec risus sed, aliquet interdum eros. Sed eget urna faucibus, gravida leo nec, aliquet magna. Integer quis pretium risus. Suspendisse ultrices lacinia egestas. Suspendisse malesuada tincidunt orci, sit amet consectetur neque porttitor eget. Vestibulum placerat maximus arcu at gravida. Vestibulum augue nisl, ullamcorper in feugiat nec, ornare sit amet dui. Sed consectetur quis nisi sit amet malesuada. Sed commodo posuere eros nec dapibus. Nulla porta maximus maximus. Cras turpis felis, mattis non justo a, posuere pulvinar mauris. Cras luctus lorem mi, quis vehicula sem fermentum finibus. Sed ut felis eu sem finibus volutpat non sed nisi. Praesent pretium nunc non neque elementum lobortis. Fusce nec urna massa.
+            </p>
+        </div>
+        <br>
 
     </div>
 
 </div>
 
-<footer>Footer stuff</footer>
+<footer></footer>
 
 </body>
 </html>
