ajax skeletonsfor prompt and story

--- a/promptWrite.html
+++ b/promptWrite.html
@@ -45,7 +45,7 @@
         </ul>
     </nav>
 
-    <div class="main-body" ng-controller="promptWriteController as pwc">
+    <div class="main-body" ng-controller="promptWriteController as pwc" init>
         <form action="TARGET_PHP_GOES_HERE">
             <div>
                 <p>Genre</p>
