Prompt retrieval from server now working - angular AND on DOM

--- a/storyWrite.html
+++ b/storyWrite.html
@@ -50,9 +50,9 @@
         <main>
             <p>Create A Story</p>
             <div id="promptBox">
-                <p id="storyPrompt">{{swc.prompt}}</p>
-                <p id="storyGenre">{{swc.genre}}</p>
-                <p id="storySetting">{{swc.setting}}</p>
+                <p id="storyPrompt">Prompt: {{swc.prompt}}</p>
+                <p id="storyGenre">Genre: {{swc.genre}}</p>
+                <p id="storySetting">Setting: {{swc.setting}}</p>
                 <p id="posted">Posted by {{swc.poster}} on {{swc.postDate}}</p>
             </div>
             <form action="TARGET_PHP_GOES_HERE">
