--- a/tempIndex.html
+++ b/tempIndex.html
@@ -6,7 +6,6 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -17,13 +16,17 @@
     <!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
+
+    <link rel="stylesheet" text="text/css" href="style.css">
+
     <style>
         body {
             font-family: Arial;
             box-sizing: border-box;
         }
 
-        input[type=text], input[type=password], select {
+        input[type=text], select {
             width: 100%;
             padding: 12px 20px;
             margin: 8px 0;
@@ -59,12 +62,11 @@
             background-color: #2efaff;
         }
 
-
     </style>
-    <link rel="stylesheet" text="text/css" href="style.css">
 
 </head>
-<body>
+<body ng-app="storyPress">
+
 <header>
     <div id="title">
         <!--temp title or maybe not-->
@@ -84,68 +86,23 @@
             <li>Browse Stories/Prompts</li>
             <li>My Stories</li>
             <li>My Prompts</li>
-            <li>Account Settings</li>
+            <li><a href="#character">Character</a></li>
+            <li><a href="#account">Account Settings</a></li>
         </ul>
     </nav>
 
     <div class="main-body">
 
-        <div id="characterForm" ng-app="fakeApp" ng-controller="userProfileController as uc">
-            <button ng-click="uc.sendCharacter()">Load a Dummy</button>
-            <h1>{{uc.userData.name}}'s Account</h1>
-            <table class="table table-bordered table-hover">
-                <tbody>
-                <tr>
-                    <th>Name</th>
-                    <th>{{uc.userData.name}}</th>
-                    <th><button class="btn btn-warning" ng-click="uc.doSometing()">Edit</button></th>
-                </tr>
-                <tr>
-                    <th>Email</th>
-                    <th>{{uc.userData.course}}</th>
-                    <th><button class="btn btn-warning" ng-click="uc.doSometing()">Edit</button></th>
-                </tr>
-                <tr>
-                    <th>Id</th>
-                    <th>{{uc.userData.id}}</th>
-                    <th><button class="btn btn-warning" ng-click="uc.doSometing()">Edit</button></th>
-                </tr>
-                </tbody>
-            </table>
+       <ng-view></ng-view>
 
-            <!--testing $HTML-->
-            <p ng-bind="uc.tester"></p>
-            <table class="table table-condensed">
-                Maybe put stories links here
-                <tbody>
-                <tr>
-                    <th>#</th>
-                    <!--<th>image</th>-->
-                    <th>grade</th>
-                    <th>id</th>
-                    <th>course</th>
-                </tr>
-                <tr ng-repeat="stuff in uc.allData">
-                    <td>{{ $index + 1 }}</td>
-                    <!--<td><img ng-src="{{ song.artworkUrl60 }}"></td>-->
-                    <td>{{ stuff.grade }}:</td>
-                    <td>{{ stuff.id }}</td>
-                    <td>{{ stuff.course }}</td>
-                </tr>
-                </tbody>
-            </table>
-            <!--end Test-->
-        </div>
     </div>
-</div>
 
 </div>
 
 <footer>Footer stuff</footer>
+
 </body>
-<script>
-    angular.module("fakeApp", [])
+<script src="angularApp.js"></script>
+<script src="controllers.js"></script>
 
-
-</script>
 </html>
