--- a/userProfile.html
+++ b/userProfile.html
@@ -1,92 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Story Press</title>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-    <!-- AngularJS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-
-    <style>
-        body {
-            font-family: Arial;
-            box-sizing: border-box;
-        }
-
-        input[type=text], input[type=password], select {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        textarea {
-            width: 100%;
-            height: 150px;
-            padding: 12px 20px;
-            box-sizing: border-box;
-            border: 2px solid #ccc;
-            border-radius: 4px;
-            background-color: #f8f8f8;
-            resize: none;
-        }
-
-        input[type=submit] {
-            width: 100%;
-            background-color: #4ed1ff;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        input[type=submit]:hover {
-            background-color: #2efaff;
-        }
 
 
-    </style>
-    <link rel="stylesheet" text="text/css" href="style.css">
 
-</head>
-<body>
-<header>
-    <div id="title">
-        <!--temp title or maybe not-->
-        <h1>Story Press</h1>
-        <!--come up with better tag line-->
-        <span>Come up with a prompt, or write a story based on one!</span>
-    </div>
-</header>
 
-<div class="main-container">
-    <nav class="sidebar">
-        <div>
-            <span>fontawesome icon here</span>
-            <span>username</span>
-        </div>
-        <ul>
-            <li>Browse Stories/Prompts</li>
-            <li>My Stories</li>
-            <li>My Prompts</li>
-            <li>Account Settings</li>
-        </ul>
-    </nav>
 
     <div class="main-body">
 
@@ -139,80 +54,77 @@
         </div>
     </div>
 
-</div>
 
-<footer>Footer stuff</footer>
-</body>
-<script>
-    angular.module("fakeApp", [])
-            .service("userProfileService", function ($http) {
-                var userProfileScope = this;
-                this.test = "testing yo";
-                var baseUrl = "get_stories.php";
-                var url = '';
-                var char = '';
-                this.userData = {};
-                this.allData = {};
 
-                var makeUrl = function(){
-                    url = baseUrl + char + "&callback=JSON_CALLBACK"
-                };
+<!--<script>-->
+    <!--angular.module("fakeApp", [])-->
+            <!--.service("userProfileService", function ($http) {-->
+                <!--var userProfileScope = this;-->
+                <!--this.test = "testing yo";-->
+                <!--var baseUrl = "get_stories.php";-->
+                <!--var url = '';-->
+                <!--var char = '';-->
+                <!--this.userData = {};-->
+                <!--this.allData = {};-->
 
-                this.setInfo = function(charObj){
-                    char = charObj;
-                };
+                <!--var makeUrl = function(){-->
+                    <!--url = baseUrl + char + "&callback=JSON_CALLBACK"-->
+                <!--};-->
 
-                this.loadUserData = function(){
-                    makeUrl();
+                <!--this.setInfo = function(charObj){-->
+                    <!--char = charObj;-->
+                <!--};-->
 
-                    var dataString = $.param({mode:"all", page:1, per_page: 10});
+                <!--this.loadUserData = function(){-->
+                    <!--makeUrl();-->
 
-                    return $http({
-                        method: "POST",
-                        url: baseUrl,
-                        data: dataString,
-                        headers: {'Content-Type': 'application/x-www-form-urlencoded'}
-                    })
-                            .then(function (response) {
-                                console.log(response);
-                                        //userProfileScope.allData = response.data.data;
+                    <!--var dataString = $.param({mode:"all", page:1, per_page: 10});-->
 
-//                                        var rand = Math.floor(Math.random()* response.data.data.length);
-//                                        userProfileScope.userData = response.data.data[rand];
-                                    },
-                                    function (error) {
-                                        return error;
-                                    });
-                }
-            })
+                    <!--return $http({-->
+                        <!--method: "POST",-->
+                        <!--url: baseUrl,-->
+                        <!--data: dataString,-->
+                        <!--headers: {'Content-Type': 'application/x-www-form-urlencoded'}-->
+                    <!--})-->
+                            <!--.then(function (response) {-->
+                                <!--console.log(response);-->
+                                        <!--//userProfileScope.allData = response.data.data;-->
 
-            .controller("userProfileController", function (userProfileService, $log) {
-                this.tester = userProfileService.test;
-                var userProfileScope = this;
-                this.userData = userProfileService.userData;
-                this.allData = userProfileService.allData;
-                this.loading = "Load";
+<!--//                                        var rand = Math.floor(Math.random()* response.data.data.length);-->
+<!--//                                        userProfileScope.userData = response.data.data[rand];-->
+                                    <!--},-->
+                                    <!--function (error) {-->
+                                        <!--return error;-->
+                                    <!--});-->
+                <!--}-->
+            <!--})-->
 
-                this.results = userProfileService.results;
+            <!--.controller("userProfileController", function (userProfileService, $log) {-->
+                <!--this.tester = userProfileService.test;-->
+                <!--var userProfileScope = this;-->
+                <!--this.userData = userProfileService.userData;-->
+                <!--this.allData = userProfileService.allData;-->
+                <!--this.loading = "Load";-->
 
-                this.sendCharInfo = function(){
-                    userProfileService.setInfo(this.char.name);
-                };
+                <!--this.results = userProfileService.results;-->
 
-                this.submitLoad = function(){
-                    return this.loading;
-                };
-                this.sendCharacter = function(){
-                    userProfileService.loadUserData()
-                            .then(function(response){
-                        userProfileScope.userData = userProfileService.userData;
-                        userProfileScope.allData = userProfileService.allData;
-                    },function(error){
-                                $log.warn(error);
-                            });
+                <!--this.sendCharInfo = function(){-->
+                    <!--userProfileService.setInfo(this.char.name);-->
+                <!--};-->
 
-                };
-            })
+                <!--this.submitLoad = function(){-->
+                    <!--return this.loading;-->
+                <!--};-->
+                <!--this.sendCharacter = function(){-->
+                    <!--userProfileService.loadUserData()-->
+                            <!--.then(function(response){-->
+                        <!--userProfileScope.userData = userProfileService.userData;-->
+                        <!--userProfileScope.allData = userProfileService.allData;-->
+                    <!--},function(error){-->
+                                <!--$log.warn(error);-->
+                            <!--});-->
 
-</script>
-</html>
+                <!--};-->
+            <!--})-->
+
+<!--</script>-->
