angular controllers combined - NC

--- a/fakeLandingPage.html
+++ b/fakeLandingPage.html
@@ -1,5 +1,5 @@
 <div class="main-body">
     <h1>Landing PAge</h1>
-    <li><a href="#character">Character</a></li>
-    <li><a href="#account">Account Settings</a></li>
+    <li><a href="#login">Login</a></li>
+    <li><a href="#signup">Sign Up</a></li>
 </div>
