--- a/userLogin.html
+++ b/userLogin.html
@@ -1,151 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Story Press</title>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-    <!-- AngularJS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-
-    <style>
-        body {
-            font-family: Arial;
-            box-sizing: border-box;
-        }
-
-        input[type=text], input[type=password], select {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        textarea {
-            width: 100%;
-            height: 150px;
-            padding: 12px 20px;
-            box-sizing: border-box;
-            border: 2px solid #ccc;
-            border-radius: 4px;
-            background-color: #f8f8f8;
-            resize: none;
-        }
-
-        input[type=submit] {
-            width: 100%;
-            background-color: #4ed1ff;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        input[type=submit]:hover {
-            background-color: #2efaff;
-        }
 
 
-    </style>
-    <link rel="stylesheet" text="text/css" href="style.css">
+<div class="main-body">
 
-</head>
-<body>
-<header>
-    <div id="title">
-        <!--temp title or maybe not-->
-        <h1>Story Press</h1>
-        <!--come up with better tag line-->
-        <span>Come up with a prompt, or write a story based on one!</span>
-    </div>
-</header>
-
-<div class="main-container">
-    <nav class="sidebar">
-        <div>
-            <span>fontawesome icon here</span>
-            <span>username</span>
-        </div>
-        <ul>
-            <li>Browse Stories/Prompts</li>
-            <li>My Stories</li>
-            <li>My Prompts</li>
-            <li>Account Settings</li>
-        </ul>
-    </nav>
-
-    <div class="main-body">
-
-        <div id="characterForm" ng-app="fakeApp" ng-controller="userProfileController as uc">
-            <button ng-click="uc.sendCharacter()">Load a Dummy</button>
-            <h1>{{uc.userData.name}}'s Account</h1>
-            <table class="table table-bordered table-hover">
-                <tbody>
-                <tr>
-                    <th>Name</th>
-                    <th>{{uc.userData.name}}</th>
-                    <th><button class="btn btn-warning" ng-click="uc.doSometing()">Edit</button></th>
-                </tr>
-                <tr>
-                    <th>Email</th>
-                    <th>{{uc.userData.course}}</th>
-                    <th><button class="btn btn-warning" ng-click="uc.doSometing()">Edit</button></th>
-                </tr>
-                <tr>
-                    <th>Id</th>
-                    <th>{{uc.userData.id}}</th>
-                    <th><button class="btn btn-warning" ng-click="uc.doSometing()">Edit</button></th>
-                </tr>
-                </tbody>
-            </table>
-
-            <!--testing $HTML-->
-            <p ng-bind="uc.tester"></p>
-            <table class="table table-condensed">
-                Maybe put stories links here
-                <tbody>
-                <tr>
-                    <th>#</th>
-                    <!--<th>image</th>-->
-                    <th>grade</th>
-                    <th>id</th>
-                    <th>course</th>
-                </tr>
-                <tr ng-repeat="stuff in uc.allData">
-                    <td>{{ $index + 1 }}</td>
-                    <!--<td><img ng-src="{{ song.artworkUrl60 }}"></td>-->
-                    <td>{{ stuff.grade }}:</td>
-                    <td>{{ stuff.id }}</td>
-                    <td>{{ stuff.course }}</td>
-                </tr>
-                </tbody>
-            </table>
-            <!--end Test-->
-        </div>
+    <div id="characterForm">
+        <form>
+            <input type="text" placeholder="name" class="success" id="name">
+            <input type="text" placeholder="password" id="password">
+            <input type="button" id="button" value="Log In" ng-click="uc.loginUser()">
+            <div id="message"></div>
+        </form>
     </div>
 </div>
-
 </div>
 
-<footer>Footer stuff</footer>
-</body>
-<script>
-    angular.module("fakeApp", [])
-
-
-</script>
-</html>
