--- a/userProfile.html
+++ b/userProfile.html
@@ -5,7 +5,18 @@
 
     <div class="main-body">
 
-        <div id="characterForm" ng-app="fakeApp" ng-controller="userProfileController as uc">
+        <div ng-hide="uc.loggedIn" id="loginForm">
+            <p>test</p>
+            <form>
+
+                <input type="text" placeholder="name" class="success" id="name">
+                <input type="text" placeholder="password" id="password">
+                <input type="button" id="button" value="Log In" ng-click="uc.loginUser()">
+                <div id="message"></div>
+            </form>
+        </div>
+
+        <div ng-show="uc.loggedIn" id="userSettings">
             <button ng-click="uc.sendCharacter()">Load a Dummy</button>
             <h1>{{uc.userData.name}}'s Account</h1>
             <table class="table table-bordered table-hover">
@@ -17,114 +28,19 @@
                 </tr>
                 <tr>
                     <th>Email</th>
-                    <th>{{uc.userData.course}}</th>
+                    <th>{{uc.userData.name}}@gmail.com</th>
                     <th><button class="btn btn-warning" ng-click="uc.doSometing()">Edit</button></th>
                 </tr>
                 <tr>
                     <th>Id</th>
-                    <th>{{uc.userData.id}}</th>
+                    <th>{{$index}}</th>
                     <th><button class="btn btn-warning" ng-click="uc.doSometing()">Edit</button></th>
                 </tr>
                 </tbody>
             </table>
 
-                <!--testing $HTML-->
-                <p ng-bind="uc.tester"></p>
-                <table class="table table-condensed">
-                    Maybe put stories links here
-                    <tbody>
-                    <tr>
-                        <th>#</th>
-                        <!--<th>image</th>-->
-                        <th>grade</th>
-                        <th>id</th>
-                        <th>course</th>
-                    </tr>
-                    <tr ng-repeat="stuff in uc.allData">
-                        <td>{{ $index + 1 }}</td>
-                        <!--<td><img ng-src="{{ song.artworkUrl60 }}"></td>-->
-                        <td>{{ stuff.grade }}:</td>
-                        <td>{{ stuff.id }}</td>
-                        <td>{{ stuff.course }}</td>
-                    </tr>
-                    </tbody>
-                </table>
-                <!--end Test-->
+
             </div>
         </div>
     </div>
 
-
-
-<!--<script>-->
-    <!--angular.module("fakeApp", [])-->
-            <!--.service("userProfileService", function ($http) {-->
-                <!--var userProfileScope = this;-->
-                <!--this.test = "testing yo";-->
-                <!--var baseUrl = "get_stories.php";-->
-                <!--var url = '';-->
-                <!--var char = '';-->
-                <!--this.userData = {};-->
-                <!--this.allData = {};-->
-
-                <!--var makeUrl = function(){-->
-                    <!--url = baseUrl + char + "&callback=JSON_CALLBACK"-->
-                <!--};-->
-
-                <!--this.setInfo = function(charObj){-->
-                    <!--char = charObj;-->
-                <!--};-->
-
-                <!--this.loadUserData = function(){-->
-                    <!--makeUrl();-->
-
-                    <!--var dataString = $.param({mode:"all", page:1, per_page: 10});-->
-
-                    <!--return $http({-->
-                        <!--method: "POST",-->
-                        <!--url: baseUrl,-->
-                        <!--data: dataString,-->
-                        <!--headers: {'Content-Type': 'application/x-www-form-urlencoded'}-->
-                    <!--})-->
-                            <!--.then(function (response) {-->
-                                <!--console.log(response);-->
-                                        <!--//userProfileScope.allData = response.data.data;-->
-
-<!--//                                        var rand = Math.floor(Math.random()* response.data.data.length);-->
-<!--//                                        userProfileScope.userData = response.data.data[rand];-->
-                                    <!--},-->
-                                    <!--function (error) {-->
-                                        <!--return error;-->
-                                    <!--});-->
-                <!--}-->
-            <!--})-->
-
-            <!--.controller("userProfileController", function (userProfileService, $log) {-->
-                <!--this.tester = userProfileService.test;-->
-                <!--var userProfileScope = this;-->
-                <!--this.userData = userProfileService.userData;-->
-                <!--this.allData = userProfileService.allData;-->
-                <!--this.loading = "Load";-->
-
-                <!--this.results = userProfileService.results;-->
-
-                <!--this.sendCharInfo = function(){-->
-                    <!--userProfileService.setInfo(this.char.name);-->
-                <!--};-->
-
-                <!--this.submitLoad = function(){-->
-                    <!--return this.loading;-->
-                <!--};-->
-                <!--this.sendCharacter = function(){-->
-                    <!--userProfileService.loadUserData()-->
-                            <!--.then(function(response){-->
-                        <!--userProfileScope.userData = userProfileService.userData;-->
-                        <!--userProfileScope.allData = userProfileService.allData;-->
-                    <!--},function(error){-->
-                                <!--$log.warn(error);-->
-                            <!--});-->
-
-                <!--};-->
-            <!--})-->
-
-<!--</script>-->
