prompt post functionality

--- a/promptWrite.html
+++ b/promptWrite.html
@@ -60,7 +60,7 @@
                 <textarea placeholder="Write your story prompt here!" ng-model="pwc.prompt">
                 </textarea>
             </div>
-            <input type="submit" ng-click="">
+            <input type="submit" ng-click="pwc.post();">
         </form>
     </div>
 </div>
