--- a/promptWrite.html
+++ b/promptWrite.html
@@ -45,7 +45,7 @@
         </ul>
     </nav>
 
-    <div class="main-body" ng-controller="promptWriteController as pwc" init>
+    <div class="main-body" ng-controller="promptWriteController as pwc" ng-init="pwc.status = 'Submit Prompt';">
         <form>
             <div>
                 <p>Genre</p>
@@ -60,7 +60,8 @@
                 <textarea placeholder="Write your story prompt here!" ng-model="pwc.prompt">
                 </textarea>
             </div>
-            <input type="submit" ng-click="pwc.post();">
+            <input type="submit" value="{{pwc.status}}" ng-click="pwc.post(pwc.prompt, pwc.genre, pwc.setting);
+                pwc.prompt = ''; pwc.genre = ''; pwc.setting = ''; pwc.status = 'Submitted!';">
         </form>
     </div>
 </div>
